# molexp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  run_slurm.sh
.queues/: queue.yaml  slurm.sh
example/: batch.py  build.py  eq.py  run.py  run_batch1.py  run_queue.sh  tg.py
example/.queues/: slurm.sh
example/NMNx1/: NMN_converted.lmp  init.data  run_queue.sh  system.ff
example/NMNx4/: NMN_converted.input  NMN_converted.lmp  init.data  log.lammps  run_queue.sh  system.ff
example/NMNx8/: NMN_converted.input  NMN_converted.lmp  err  init.data  log.lammps  out  run_queue.sh  system.ff
example/NMx1/: 1000K.data  500K.data  600K.data  NM_converted.input  NM_converted.lmp  eq.in  eq.thermo  err  init.data  log.lammps  out  run_queue.sh  system.ff  tg.in  tg.thermo
example/NMx4/: NM_converted.lmp  init.data  log.lammps  run_queue.sh  system.ff
example/NMx8/: NM_converted.lmp  init.data  log.lammps  run_queue.sh  system.ff
example/cmdline/: funcs.py  run.py  slurm_funcs.py
example/experiments/: json_cache.bak  json_cache.dir
example/tmp/: ANTECHAMBER_AC.AC  ANTECHAMBER_AC.AC0  ANTECHAMBER_AM1BCC.AC  ANTECHAMBER_AM1BCC_PRE.AC  ANTECHAMBER_BOND_TYPE.AC0  ATOMTYPE.INF  H  H.ac  H.frcmod  H.prepi  H_N_M_T.inpcrd  H_N_M_T.prmtop  H_N_M_T_from_amber.gro  H_N_M_T_from_amber.top  M  M.ac  M.frcmod  N  (+35 more)
test/: json_cache.bak
tests/: business_logic.py  func.py  logic.py  test_asset.py  test_exp.py  test_parallel_proj.py  test_param.py  test_proj.py  test_project.py  test_script.py  test_serial_proj.py  test_submitor.py  test_task.py
(+69 files in other folders)
